package aplicacao;

public interface ComandoMenu {
    void executar() throws Exception;

    String getDescricao();
}
